--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "vue-loader": "14.2.2",
     "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.5.17",
-    "vue-turbolinks": "^2.0.3"
+    "vue-turbolinks": "^2.0.3",
+    "webpack-dev-server": "2.11.2"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
-  }
+    "webpack-cli": "^3.1.0"
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/mau5atron/promanagr.git",
+  "author": "mau5atron <gabrielbetancourt96@outlook.com>",
+  "license": "MIT",
+  "description": "app"
 }
