--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@
 /node_modules
 yarn-debug.log*
 .yarn-integrity
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
